--- a/bin/application/Viewfxml/Dashbord.fxml
+++ b/bin/application/Viewfxml/Dashbord.fxml
@@ -38,11 +38,11 @@
                <padding>
                   <Insets left="30.0" />
                </padding></Button>
-            <Button id="btn1" fx:id="btn4" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#btn4" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Add Employer" textFill="#9c9c9c">
+            <Button id="btn1" fx:id="Employés" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#Employés" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Mes employés" textFill="#9c9c9c">
                <padding>
                   <Insets left="30.0" />
                </padding></Button>
-            <Button id="btn1" fx:id="btn5" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#btn5" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="btn5" textFill="#9c9c9c">
+            <Button id="btn1" fx:id="Clients" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#Clients" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Mes Clients" textFill="#9c9c9c">
                <padding>
                   <Insets left="30.0" />
                </padding></Button>
