--- a/bin/application/Viewfxml/ajouter_rdv.fxml
+++ b/bin/application/Viewfxml/ajouter_rdv.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="add_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.ajouter_rdv">
+<Pane fx:id="add_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Ajouter_rdv">
    <children>
       <GridPane prefHeight="600.0" prefWidth="930.0">
         <columnConstraints>
@@ -24,8 +31,6 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -50,27 +55,81 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Button layoutX="351.0" layoutY="10.0" mnemonicParsing="false" onAction="#retour" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #F8F9FA;" text="&lt; Retour">
+                  <Button layoutX="351.0" layoutY="19.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="&lt; Retour">
                      <font>
-                        <Font name="System Bold" size="13.0" />
+                        <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+               <children>
+                  <Line endX="100.0" layoutX="465.0" layoutY="100.0" rotate="90.0" scaleX="2.2" startX="-100.0" />
+                  <DatePicker fx:id="date_fin_rdv" layoutX="108.0" layoutY="21.0" onAction="#date" prefWidth="250.0" promptText="date fin" />
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+               <children>
+                  <TextField fx:id="car_model" layoutX="108.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="car model" />
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
+               <children>
+                  <TextField fx:id="prix" layoutX="108.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Prix" />
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6">
+               <children>
+                  <TextArea fx:id="description" layoutX="58.0" layoutY="12.0" prefHeight="80.0" prefWidth="350.0" promptText="Description" />
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="8">
+               <children>
+                  <Button fx:id="btn_rdv" layoutX="405.0" layoutY="16.0" mnemonicParsing="false" onAction="#add_rdv" prefHeight="30.0" prefWidth="120.0" text="Button">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font></Button>
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <TextField fx:id="nom_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Nom" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="10" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <Button layoutX="351.0" layoutY="10.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Ajouter">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                  </Button>
+                  <TextField fx:id="prenom_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Prenom" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <children>
+                  <TextField fx:id="numero_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Numéro" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <children>
+                  <CheckBox fx:id="invite_check" layoutX="111.0" layoutY="25.0" mnemonicParsing="false" onAction="#invite_check" text="invité" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <Line endX="100.0" layoutX="298.0" layoutY="67.0" startX="-245.0" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <TextField fx:id="serch" layoutX="108.0" layoutY="41.0" prefHeight="25.0" prefWidth="250.0" promptText="sélectioner un client">
+                     <contextMenu>
+                        <ContextMenu fx:id="context">
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                          </items>
+                        </ContextMenu>
+                     </contextMenu>
+                  </TextField>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+               <children>
+                  <DatePicker fx:id="datedebut" layoutX="108.0" layoutY="21.0" onAction="#date_dd" prefWidth="250.0" promptText="date debut" />
                </children>
             </Pane>
          </children>
